--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "start": "node server.js",
     "build": "npm run build"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
