--- a/.env
+++ b/.env
@@ -1,9 +1,12 @@
 DB_CONNECTION_STRING = "mongodb+srv://admin:admin123@cluster0.obo7f.mongodb.net/Projeto-Integrador?retryWrites=true&w=majority&appName=Cluster0"
 
-
+JWT_KEY = "59b8fd20-b60e-4637-a035-483f989c21fe"
 PORT = 3000
 DB_CONNECTION_USER = "admin"
 DB_CONECTION_PASS = "admin123"
 
-# SMTP_USER = "portalcorpohumano@gmail.com"
-# SMTP_PASS = "bodyhumanportal123"
+SMTP_USER = "portalcorpohumano@gmail.com"
+SMTP_PASS = "icjy iuzs vhgh tlyk"
+SMTP_HOST = "smtp.gmail.com" 
+SMTP_PORT = 587
+# "bodyhumanportal123"
