--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "mjml": "^4.15.3",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
+    "mustache": "^4.2.0",
     "nodemailer": "^6.9.15"
   },
   "devDependencies": {
