--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm run schema-to-js && nodemon server.js",
+    "dev": "npm run schema-to-js && ts-node --esm --transpile-only src/server.ts",
     "start": "npm run schema-to-js && node server.js",
     "build": "npm run schema-to-js && npm run build",
-    "schema-to-js": "node node_modules/@paljs/cli/bin/run schema json -s ./src/prisma/schema.prisma -o ./src/prisma -t js"
+    "schema-to-js": "node node_modules/@paljs/cli/bin/run schema json -s ./src/prisma/schema.prisma -o ./src/prisma -t js",
+    "abc": "nodemon -e js,ts,mjml --exec 'node --loader ts-node/esm src/server.ts'"
   },
   "keywords": [],
   "author": "",
@@ -28,9 +29,15 @@
   },
   "devDependencies": {
     "@paljs/cli": "^8.0.1",
+    "@types/node": "^22.10.5",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
-    "prisma": "^6.1.0"
+    "prisma": "^6.1.0",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0"
+  },
+  "peerDependencies": {
+    "typescript": "^5.7.2"
   }
 }
