--- a/package.json
+++ b/package.json
@@ -5,22 +5,25 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm run schema-to-js && ts-node --esm --transpile-only src/server.ts",
+    "test": "jest",
+    "dev": "npm run schema-to-js && npm run dev:type",
+    "dev:type": "nodemon -e js,ts,mjml,env --exec 'node --loader ts-node/esm src/server.ts'",
     "start": "npm run schema-to-js && node server.js",
     "build": "npm run schema-to-js && npm run build",
-    "schema-to-js": "node node_modules/@paljs/cli/bin/run schema json -s ./src/prisma/schema.prisma -o ./src/prisma -t js",
-    "abc": "nodemon -e js,ts,mjml --exec 'node --loader ts-node/esm src/server.ts'"
+    "schema-to-js": "node node_modules/@paljs/cli/bin/run schema json -s ./src/prisma/schema.prisma -o ./src/prisma -t ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^6.1.0",
+    "@prisma/client": "^6.2.1",
+    "@types/jsonwebtoken": "^9.0.7",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "deep-email-validator": "^0.1.21",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mjml": "^4.7.1",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
@@ -29,11 +32,16 @@
   },
   "devDependencies": {
     "@paljs/cli": "^8.0.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.10.5",
+    "@types/nodemailer": "^6.4.17",
     "jest": "^29.7.0",
-    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
-    "prisma": "^6.1.0",
+    "prisma": "^6.2.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0"
   },
