--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ JWT_KEY = "59b8fd20-b60e-4637-a035-483f989c21fe"
 PORT = "3000"
 DB_CONNECTION_USER = "admin"
 DB_CONECTION_PASS = "admin123"
+GOOGLE_CLIENT_ID = "695143152288-4kt2b0sf1d1tsg5mfd7m2nouj5saship.apps.googleusercontent.com"
 
 SMTP_USER = "portalcorpohumano@gmail.com"
 SMTP_PASS = "icjy iuzs vhgh tlyk"
