--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "deep-email-validator": "^0.1.21",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
-    "mjml": "^4.7.1",
+    "mjml": "^4.15.3",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
     "mustache": "^4.2.0",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "redis": "^4.7.0",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "@paljs/cli": "^8.0.1",
@@ -38,6 +41,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.5",
     "@types/nodemailer": "^6.4.17",
+    "@types/speakeasy": "^2.0.10",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "prisma": "^6.2.1",
