--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "ts-node": {
     "esm": true
   },
+  "include": ["src/**/*.ts"],
   "compilerOptions": {
     "target": "ESNext" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
     "module": "ESNext" /* Specify what module code is generated. */,
