FEAT: update environment variables for Redis connection and adjust Redis client configuration

--- a/.env
+++ b/.env
@@ -1,13 +1,17 @@
 DB_CONNECTION_STRING= "mongodb+srv://admin:admin123@cluster0.obo7f.mongodb.net/Projeto-Integrador?retryWrites=true&w=majority&appName=Cluster0"
-
-JWT_KEY = "59b8fd20-b60e-4637-a035-483f989c21fe"
-PORT = "3000"
 DB_CONNECTION_USER = "admin"
 DB_CONECTION_PASS = "admin123"
+
+JWT_KEY = "59b8fd20-b60e-4637-a035-483f989c21fe"
+
 GOOGLE_CLIENT_ID = "695143152288-4kt2b0sf1d1tsg5mfd7m2nouj5saship.apps.googleusercontent.com"
 
-SMTP_USER = "portalcorpohumano@gmail.com"
-SMTP_PASS = "icjy iuzs vhgh tlyk"
-SMTP_HOST = "smtp.gmail.com" 
-SMTP_PORT = "587"
-# "bodyhumanportal123"
+SMTP_USER= "portalcorpohumano@gmail.com"
+SMTP_PASS= "icjy iuzs vhgh tlyk"
+SMTP_HOST= "smtp.gmail.com" 
+SMTP_PORT= "587"
+
+REDIS_URL= "redis://red-cul20vl2ng1s7382u4g0:kN0WeBrrtym6G1BDA5PImjIn7SxGLYIn@oregon-redis.render.com:6379
+"
+
+PORT = "3000"
