--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "jest",
-    "dev": "npm run schema-to-js && npm run dev:type",
+    "dev": "npm run dev:type",
     "dev:type": "nodemon -e js,ts,mjml,env --exec 'node --loader ts-node/esm src/server.ts'",
-    "start": "npm run schema-to-js && node server.js",
+    "start": "npm install && npm run schema-to-js",
     "build": "npm run schema-to-js && npm run build",
     "schema-to-js": "node node_modules/@paljs/cli/bin/run schema json -s ./src/prisma/schema.prisma -o ./src/prisma -t ts"
   },
