FEAT: enhance dev:type script to include trace-deprecation flag for better debugging

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "jest",
     "dev": "npm run dev:type",
-    "dev:type": "nodemon -e js,ts,mjml,env --exec 'node --loader ts-node/esm src/server.ts'",
+    "dev:type": "nodemon -e js,ts,mjml,env --exec 'node --loader --trace-deprecation ts-node/esm src/server.ts'",
     "start": "npm install && npm run schema-to-js",
     "build": "npm run schema-to-js && npm run build",
     "schema-to-js": "node node_modules/@paljs/cli/bin/run schema json -s ./src/prisma/schema.prisma -o ./src/prisma -t ts"
