--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "esm": true
   },
   "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"],
   "compilerOptions": {
     "target": "ESNext" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
     "module": "ESNext" /* Specify what module code is generated. */,
