CHORE: update Redis URL to use secure connection and format; adjust PORT variable

--- a/.env
+++ b/.env
@@ -11,7 +11,5 @@ SMTP_PASS= "icjy iuzs vhgh tlyk"
 SMTP_HOST= "smtp.gmail.com" 
 SMTP_PORT= "587"
 
-REDIS_URL= "redis://red-cul20vl2ng1s7382u4g0:kN0WeBrrtym6G1BDA5PImjIn7SxGLYIn@oregon-redis.render.com:6379
-"
-
+REDIS_URL="rediss://red-cul20vl2ng1s7382u4g0:kN0WeBrrtym6G1BDA5PImjIn7SxGLYIn@oregon-redis.render.com:6379"
 PORT = "3000"
